--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,14 +5,15 @@ $height-tasks: 56px;
 $gray0: #f1f3f6;
 $gray1: #d3dbe4;
 $gray2: #ced3da;
-$gray3: #b9c1ca;
-$gray4: #58626a;
+$color-text-light: #b9c1ca;
+$color-text-dark: #58626a;
 $bg-tasks-header: #abb4be;
 $gray6: #d5d9de;
 
 $project-color1: #1abc9c;  // project education
 $project-color2: #e74c3c;  // project home
 $project-color3: #3799d7;  // project work
+$txt-header-on-hover: #42aadf; //header on hover
 $project-color3-hover: #2980b9;  // project work-hover
 $project-color4: #f0c33c;  // project kids
 $project-color5: #e77a35;  // project study
