--- a/src/scss/tasks.scss
+++ b/src/scss/tasks.scss
@@ -4,7 +4,7 @@
 		text-align: center;
 		text-transform: uppercase;
 		font-size: 9px;
-		line-height: 22px;
+		line-height: 9px + 13px;
 		font-family: "EncodeSansWide_semibold", Arial, sans-serif;
 		color: white;
 		background-color: $bg-tasks-header;
@@ -27,6 +27,7 @@
 
 			margin-right: 12px;
 			float: left;
+			cursor: pointer;
 
 			&:hover {
 				background-image: url(../img/inputCheckBox1.png);
@@ -34,18 +35,20 @@
 		}
 
 		&__name {
-			color: $gray4;
+			color: $color-text-dark;
 			font-family: "EncodeSansWide_reg", Arial, sans-serif;
 			font-size: 15px;
-			line-height: 23px;
+			text-overflow: ellipsis;
+			overflow: hidden;
+			line-height: 15px + 8px;
 		}
 
 		&__date {
-			color: $gray3;
+			color: $color-text-light;
 			font-family: "EncodeSansWide_semibold", Arial, sans-serif;
 			font-size: 9px;
 			text-transform: uppercase;
-			line-height: 17px;
+			line-height: 9px + 8px;
 
 			padding-left: 13px;
 			vertical-align: middle;
@@ -57,11 +60,11 @@
 			position: relative;
 			padding-left: 8px + 4px;
 
-			color: $gray3;
+			color: $color-text-light;
 			font-family: "EncodeSansWide_semibold", Arial, sans-serif;
 			text-transform: uppercase;
 			font-size: 9px;
-			line-height: 17px;
+			line-height: 9px + 8px;
 
 			&:before {
 				content: "";
@@ -71,7 +74,7 @@
 				width: 8px;
 				height: 8px;
 				border-radius: 8px;
-				background-color: $gray3;
+				background-color: $color-text-light;
 				vertical-align: middle;
 
 				.tasks-item_project-1 & {
@@ -88,20 +91,20 @@
 		}
 
 		&__alarm {
-			color: $gray3;
+			color: $color-text-light;
 			font-family: "EncodeSansWide_semibold", Arial, sans-serif;
 			font-size: 9px;
-			line-height: 17px;
+			line-height: 9px + 8px;
 
 			padding-left: 12px;
 			background: url(../img/ic_notifications_none.png) left center no-repeat;
 		}
 
 		&__measurement {
-			color: $gray3;
+			color: $color-text-light;
 			font-family: "EncodeSansWide_semibold", Arial, sans-serif;
 			font-size: 9px;
-			line-height: 17px;
+			line-height: 9px + 8px;
 
 			padding-left: 12px;
 			background: url(../img/ic_access_time.png) left center no-repeat;
