--- a/src/scss/tasks.scss
+++ b/src/scss/tasks.scss
@@ -35,10 +35,12 @@
 		}
 
 		&__name {
+			width: $width - 40px - 78px;
 			color: $color-text-dark;
 			font-family: "EncodeSansWide_reg", Arial, sans-serif;
 			font-size: 15px;
 			text-overflow: ellipsis;
+			white-space: nowrap;
 			overflow: hidden;
 			line-height: 15px + 8px;
 		}
@@ -60,11 +62,18 @@
 			position: relative;
 			padding-left: 8px + 4px;
 
+			width: $width - 40px - 78px;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+			overflow: hidden;
+
 			color: $color-text-light;
 			font-family: "EncodeSansWide_semibold", Arial, sans-serif;
 			text-transform: uppercase;
 			font-size: 9px;
 			line-height: 9px + 8px;
+
+
 
 			&:before {
 				content: "";
