[HTML Layouts] Rename some variables of colors

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -89,7 +89,7 @@
     //display: table;
     height: $height-header;
     text-align: center;
-    background: $gray0;
+    background: $bg-navigation;
     //overflow: hidden;
     position: relative;
 
