--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,13 +2,13 @@ $width: 320px;
 $height-header: 44px;
 $height-tasks: 56px;
 
-$gray0: #f1f3f6;
-$gray1: #d3dbe4;
+$bg-navigation: #f1f3f6;
+$item-border: #d3dbe4;
 $gray2: #ced3da;
 $color-text-light: #b9c1ca;
 $color-text-dark: #58626a;
 $bg-tasks-header: #abb4be;
-$gray6: #d5d9de;
+$bg-item-hover: #d5d9de;
 
 $project-color1: #1abc9c;  // project education
 $project-color2: #e74c3c;  // project home
