--- a/src/scss/tasks.scss
+++ b/src/scss/tasks.scss
@@ -15,7 +15,7 @@
 		height: $height-tasks;
 		overflow: hidden;
 		list-style: none;
-		border-bottom: 1px solid $gray1;
+		border-bottom: 1px solid $item-border;
 
 		&__checkbox {
 			line-height: $height-tasks;
@@ -72,8 +72,6 @@
 			text-transform: uppercase;
 			font-size: 9px;
 			line-height: 9px + 8px;
-
-
 
 			&:before {
 				content: "";
@@ -140,6 +138,10 @@
 		&-wrapper {
 			display: table-cell;
 			vertical-align: middle;
+		}
+
+		&:hover {
+			background-color: $bg-item-hover;
 		}
 	}
 }
