[BEM] - Changed icons layout, add icon before mixin

--- a/src/scss/core/exports.scss
+++ b/src/scss/core/exports.scss
@@ -1,5 +1,5 @@
 @import "util";
-@import "icons";
+@import "icons/exports";
 @import "fonts/exports";
 @import "branding/exports";
 @import "modifyers/exports";
