--- a/src/scss/core/icons/_mixins.scss
+++ b/src/scss/core/icons/_mixins.scss
@@ -2,10 +2,11 @@
   position: relative;
   $icon: nth($icon-group, 2);
   $icon-width: nth($icon, 5);
+  padding-left: $icon-width + 3px;
   &:before {
     content: "";
     position: absolute;
-    left: -$icon-width - 3px;
+    left: 0;
     top: 0;
     @extend .icon;
     @include retina-sprite($icon-group);
