[BEM] - Added week-calendar block

--- a/src/scss/mobile/blocks/exports.scss
+++ b/src/scss/mobile/blocks/exports.scss
@@ -1,6 +1,7 @@
 @import "icon/icon";
 @import "badge/badge";
 @import "button/button";
+@import "week-calendar/week-calendar";
 @import "header/header";
 @import "task-list/task-list";
 @import "body";
