--- a/src/scss/tasks.scss
+++ b/src/scss/tasks.scss
@@ -14,6 +14,7 @@
 		width: $width;
 		height: $height-tasks;
 		overflow: hidden;
+		position: relative;
 		list-style: none;
 		border-bottom: 1px solid $item-border;
 
@@ -21,9 +22,7 @@
 			line-height: $height-tasks;
 			margin-left: 12px;
 			width: 16px;
-			background-image: url(../img/inputCheckBox0.png);
-			background-repeat: no-repeat;
-			background-position: center center;
+			background: url(../img/inputCheckBox0.png) center center no-repeat transparent;
 
 			margin-right: 12px;
 			float: left;
@@ -104,7 +103,7 @@
 			line-height: 9px + 8px;
 
 			padding-left: 12px;
-			background: url(../img/ic_notifications_none.png) left center no-repeat;
+			background: url(../img/ic_notifications_none.png) left center no-repeat transparent;
 		}
 
 		&__measurement {
@@ -114,7 +113,88 @@
 			line-height: 9px + 8px;
 
 			padding-left: 12px;
-			background: url(../img/ic_access_time.png) left center no-repeat;
+			background: url(../img/ic_access_time.png) left center no-repeat transparent;
+		}
+
+		&__hover {
+			position: absolute;
+			visibility: hidden;
+			width: 100%;
+			height: 100%;
+
+			background-color: $bg-item-hover-opasity;
+
+			// Bug - I can't click onto checkbox;
+			.tasks-item:hover & {
+				visibility: visible;
+			}
+		}
+
+		&__button {
+			width: 73px;
+			height: 100%;
+			outline: none;
+			border: none;
+			cursor: pointer;
+
+			float: right;
+
+			background-color: red;
+			border-left: 1px solid #fff;
+
+			&_start {
+				background-color: $project-color3;
+			}
+			
+			&_edit {
+				background-color: $bg-btn-edit;
+			}
+		}
+
+		&__start {
+			position: relative;
+			display: inline-block;
+			padding-top: 18px;
+
+			line-height: 9px + 14px;
+			text-transform: uppercase;
+			font-family: "EncodeSansWide_bold", Arial, sans-serif;
+			font-size: 9px;
+			color: #fff;
+
+			&:before {
+				content: "";
+				position: absolute;
+				left: 25%;
+				top: 0;
+			
+				width: 18px;
+				height: 18px;
+				background: url(../img/Triangle_3.png) center top no-repeat;
+			}
+		}
+
+		&__edit {
+			position: relative;
+			display: inline-block;
+			padding-top: 18px;
+
+			line-height: 9px + 14px;
+			text-transform: uppercase;
+			font-family: "EncodeSansWide_bold", Arial, sans-serif;
+			font-size: 9px;
+			color: #fff;
+
+			&:before {
+				content: "";
+				position: absolute;
+				left: 10%;
+				top: 0;
+			
+				width: 18px;
+				height: 18px;
+				background: url(../img/Triangle_3.png) center top no-repeat;
+			}
 		}
 
 		&-content {
@@ -122,6 +202,7 @@
 			height: $height-tasks;
 			float: left;
 			display: table;
+			//position: relative;
 		}
 
 		&-time {
@@ -129,6 +210,7 @@
 			height: $height-tasks;
 			font-size: 9px;
 			display: table;
+			//position: relative;
 
 			padding-left: 12px;
 			padding-right: 12px;
@@ -140,9 +222,9 @@
 			vertical-align: middle;
 		}
 
-		&:hover {
+		/* &:hover {
 			background-color: $bg-item-hover;
-		}
+		} */
 	}
 }
 /* .project-1 {
