--- a/src/scss/mobile/blocks/exports.scss
+++ b/src/scss/mobile/blocks/exports.scss
@@ -1,5 +1,6 @@
 @import "icon/icon";
 @import "badge/badge";
+@import "separator/separator";
 @import "button/button";
 @import "week-calendar/week-calendar";
 @import "header/header";
