[BEM] - Added checkbox - Changed *task-list.html files to add checkbox identifyers

--- a/src/scss/mobile/blocks/exports.scss
+++ b/src/scss/mobile/blocks/exports.scss
@@ -3,6 +3,7 @@
 @import "separator/separator";
 @import "button/button";
 @import "week-calendar/week-calendar";
+@import "checkbox/checkbox";
 @import "header/header";
 @import "task-list/task-list";
 @import "body";
